// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inputTime > renders with ariaLabel correctly 1`] = `
"<div data-pohon="input-time-root" aria-label="Aria label" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with as correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with class correctly 1`] = `
"<div class="max-w-sm" data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with default slot correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>Default slot
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with default value correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with disabled correctly 1`] = `
"<div data-pohon="input-time-root" role="group" aria-disabled="true" data-disabled="" dir="ltr">
  <div role="spinbutton" contenteditable="false" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" aria-disabled="true" data-disabled="" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" aria-disabled="true" data-disabled="" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="false" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" aria-disabled="true" data-disabled="" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" aria-disabled="true" data-disabled="" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="false" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" aria-disabled="true" data-disabled="" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" aria-disabled="true" data-disabled="" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" disabled="" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with granularity correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with hide time zone correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with hour cycle 12 correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with hour cycle 24 correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with icon correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div><span data-pohon="input-time-leading" class=""><span class="iconify i-lucide:clock" aria-hidden="true" data-pohon="input-time-leading-icon"></span></span>
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with leadingIcon correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div><span data-pohon="input-time-leading" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-pohon="input-time-leading-icon"></span></span>
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with max value correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with min value correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with modelValue correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with neutral variant ghost correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with neutral variant none correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with neutral variant outline correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with neutral variant soft correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with neutral variant subtle correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with placeholder correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with primary variant ghost correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with primary variant none correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with primary variant outline correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with primary variant soft correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with primary variant subtle correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with readonly correctly 1`] = `
"<div data-pohon="input-time-root" role="group" data-readonly="" dir="ltr">
  <div role="spinbutton" contenteditable="false" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" aria-readonly="true" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" aria-readonly="true" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="false" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" aria-readonly="true" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" aria-readonly="true" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="false" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" aria-readonly="true" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" aria-readonly="true" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with required correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="12" aria-valuetext="12 PM" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">12</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="30" aria-valuetext="30" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">30</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="12" aria-valuetext="PM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">PM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" required="" value="12:30:00">
</div>"
`;

exports[`inputTime > renders with size lg correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with size md correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with size sm correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with size xl correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with size xs correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with trailingIcon correctly 1`] = `
"<div data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if--><span data-pohon="input-time-trailing" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-pohon="input-time-trailing-icon"></span></span><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;

exports[`inputTime > renders with ui correctly 1`] = `
"<div class="rounded-full" data-pohon="input-time-root" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="hour, " aria-valuemin="0" aria-valuemax="23" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="hour" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class="">:</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="minute, " aria-valuemin="0" aria-valuemax="59" aria-valuenow="0" aria-valuetext="Empty" data-placeholder="" data-akar-time-field-segment="minute" data-pohon="input-time-segment" class="">––</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="text" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="AM/PM" aria-valuemin="0" aria-valuemax="12" aria-valuenow="0" aria-valuetext="AM" data-akar-time-field-segment="dayPeriod" data-pohon="input-time-segment" class="">AM</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-time-field-segment="literal" data-pohon="input-time-segment" class=""></div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="">
</div>"
`;
